ama/core/cmdsets/hashcat/libhcutils/combipow.h

/*
 * combipow - hashcat utils
 *
 * Maintainer: glozanoa <glozanoa@uni.pe>
 */

int combipow2stdout(char* wl);
int combipow(char* wl, char* out);