ama/core/cmdsets/hashcat/hcutils/combinator.h

/*
 * combinator - hashcat-utils
 *
 * Maintainer: glozanoa <glozanoa@uni.pe>
 */

#include "utils.h"

int combinator(char* wl1, char* wl2, char* out);
int combinator2stdout(char* wl1, char* wl2);